<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="user_message">0</string>
    <string name="edit_message">Input a calculation</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">Answer</string>
    <string name="title_activity_calculator">Calculator</string>
    <string name="button_cal">C1</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_10">0</string>
    <string name="button_11">+</string>
    <string name="button_12">-</string>
    <string name="button_13">*</string>
    <string name="button_14">/</string>
    <string name="button_15">=</string>
    <string name="button_16">Esc</string>
    <string name="button_17">Del</string>
    <string name="title_activity_map">Map</string>
    <string name="hello_world">Hello world!</string>

    <string name="button_map">Map</string>
    <string name="location">Enter Location</string>
    <string name="specificLocation">Nashville</string>
    <string name="show">Show Map</string>
</resources>