<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".Map" >
     
    <TextView
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
		android:text="@string/location" />

	<EditText 
	    android:id="@+id/location"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/specificLocation" />
	
	<Button 
	    android:id="@+id/mapButton"
	    android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
		android:text="@string/show" 
		android:onClick="showMap" />
	
</LinearLayout>